@@ -1,7 +1,7 @@
 %Document the new JSON format, -j and new -output-json options
 %Document -decrypt-force
 %Document -collate
-%Document -impose and friends
+%Document -impose and friends (inc. 0-w, 0-h for long ones)
 
 \documentclass{book}
 % Edit here to produce cpdfmanual.pdf, cpdflibmanual.pdf, pycpdfmanual.pdf etc.
